fluxcd/apps/base/traefik-whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-whoami
  labels:
    name: traefik-whoami
